--- a/html-creator/build.gradle
+++ b/html-creator/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -7,12 +7,10 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.html"
-        minSdk 21
+        minSdk 16
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,9 +30,5 @@ android {
 
 dependencies {
 
-    implementation project(path: ':html-creator')
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 }
